--- a/docs/tutorial-dev-environment/2-스킨-디렉토리-구조.mdx
+++ b/docs/tutorial-dev-environment/2-스킨-디렉토리-구조.mdx
@@ -14,12 +14,12 @@ tags:
 - [banner.csv & bannerGroup.csv](#banner-csv-n-bannerGroup-csv)
 
 스킨 소스 내 루트에는 플랫폼 별 디렉토리(PC, Mobile)가 각각 별도로 존재합니다.
-배포 시 GitLab Runner에서는 스킨 소스 내 루트에 위치한 PC /Mobile 디렉토리를 참조하여, 해당 디렉토리 내 파일들을 각 플랫폼에 맞는 위치에 업로드해야 합니다.
+배포 시 GitLab Runner에서는 스킨 소스 내 루트에 위치한 `pc/mobile` 디렉토리를 참조하여, 해당 디렉토리 내 파일들을 각 플랫폼에 맞는 위치에 업로드해야 합니다.
 
 shop by pro 스킨은 PC 버전과 Mobile버전이 각각 별도로 업로드해야하며 각 디렉토리에는 최소한 4가지 파일 (`index.html` / `environment.json` / `banner.csv` / `bannerGroup.csv`)이 반드시 존재해야 합니다.
 그 외에는 자유롭게 디렉토리 구조를 설계하실 수 있습니다.
 
-:::danger
+:::caution 주의
 
 내부적으로 PC/Mobile 디렉토리에 직접 개발하거나, 별도의 디렉토리에서 하나의 소스로 개발을 진행하는 것은 상관없습니다.
 단, 실제 배포 단계에서는 pc/mobile 디렉토리 내 파일을 업로드하기 때문에 각 디렉토리에 소스가 존재해야 하며, 파일명은 반드시 소문자(pc, mobile)로 지정되어 있어야 합니다.
@@ -92,10 +92,9 @@ DB서버에 해당 메타 정보 등록 시 shop by pro 어드민(관리자)에 
 | ------------------------------- | ---------------------------- | ------------------------------- |
 | LOGO0001                        | (ex) 상단 로고               | LOGO (로고 배너)                |
 
-:::tip My tip
+:::tip 팁
 
 shop by pro 스킨에서는 PC / Mobile 각각 최대 11개의 배너그룹을 노출할 수 있습니다.
-
 PC/ 모바일 각각 다른 개수로 노출 가능하며, 11개를 초과하여 노출할 수 없습니다.
 
 :::
