--- a/docs/tutorial-dev-environment/2-스킨-디렉토리-구조.mdx
+++ b/docs/tutorial-dev-environment/2-스킨-디렉토리-구조.mdx
@@ -4,6 +4,7 @@ description: 스킨 프로젝트의 디렉토리 구조입니다.
 tags:
   - skin
   - directory
+keywords: [shopby, skin, '스킨 개발', '스킨 디렉토리 구조']
 ---
 
 # 스킨 디렉토리 구조
