chore: fixed untracked filed

--- a/docs/tutorial-dev-environment/1-스킨-개발-환경-구축-가이드.md
+++ b/docs/tutorial-dev-environment/1-스킨-개발-환경-구축-가이드.md
@@ -3,3 +3,132 @@ description: GitLab 프로젝트 연결 방식으로 스킨을 개발할 수 있
 ---
 
 # 스킨 개발 환경 구축 가이드
+
+## 이해하기
+
+GitLab 프로젝트 연결 방식으로 스킨을 개발하기 위해서는 스킨 개발 환경 구축이 선행되어야 합니다.  
+스킨 개발 환경 구축은 아래의 순서로 진행됩니다.
+
+![git-process-image](https://shopby.works/skin-dev-env-flow.jpg?1f5e589d9e6a2294fdc76883fde4b2a9)
+
+1.  [GIT 계정 생성 및 승인요청](#create-gitlab)
+
+    개발한 스킨 소스를 Git에 업로드 할 수 있도록 계정을 생성합니다.  
+    계정은 [NHN커머스 GitLab](https://gitlab-themes.shopby.co.kr/)에서 생성 가능합니다.  
+    계정 승인 요청 메일 정보는 [디자인 파트너스 내 판매자 공지사항](https://design.nhn-commerce.com/selleradmin/basic/cs-notice-detail.php?kind=seller_noti&no=211)을 참고해 주시기 바랍니다.  
+    (현재 디자인센터 입점 업체만 승인 처리됩니다.)
+
+2.  [프로젝트 생성](#create-project)
+
+    계정 생성이 승인되면 개발한 스킨 소스를 업로드할 레포지토리를 생성합니다.
+
+3.  [스킨 개발](#create-repository)
+
+    스킨 설치를 위해서는 레포지토리 내 main 브랜치가 있어야 하고, main 브랜치 내에는 최소한의 소스가 필요합니다.  
+    스킨 개발이 완료되면 GitLab URL과 쇼핑몰을 연결하여 설치하는 작업을 진행해야 합니다.  
+    스킨을 설치하는 방식에 대해서는 스킨 설치 가이드를 참고해 주시기 바랍니다.
+
+스킨 개발 환경 구축 각 프로세스에 대해 자세히 설명 드리도록 하겠습니다.
+
+## ① GitLab 계정 생성 및 승인 요청
+
+NHN커머스에서 관리하는 GITLAB의 계정을 생성 후 승인이 되어야 GITLAB에 접속이 가능하며 레포지토리를 생성할 수 있습니다.
+
+[GITLAB 계정 생성 페이지](https://gitlab-themes.shopby.co.kr/users/sign_in) 에서 로그인 화면 하단 Register now 텍스트 링크로 접근하여 계정을 생성합니다.  
+생성 이후에는 NHN커머스 제휴 메일을 통해 계정 승인 요청을 합니다.  
+현재 워크스페이스는 베타 제공 중으로 NHN커머스 디자인센터에 입점한 디자인 에이전시에게만 승인을 진행해주고 있습니다.
+
+승인이 완료 되면 GITLAB에 접근이 가능하며, GITLAB의 정책 상 비밀번호 입력을 통한 접근을 제한함으로 SSH 키를 사용한 Git Access만 접근이 가능합니다.
+
+### SSH key 생성
+
+개인 PC에 SSH key를 생성합니다.  
+command prompt를 통해 아래의 코드로 SSH key를 생성할 수 있습니다.
+
+생성을 위한 코드는 아래를 참고해주세요.
+
+    1
+    2          $ cd ~/.ssh
+    3          $ ssh-keygen -t rsa -b 4096 -C "jxxxx@nhn.com"
+    4          Generating public/private rsa key pair.
+    5          Enter file in which to save the key (/Users/nhn/.ssh/id_rsa):
+    6          Enter passphrase (empty for no passphrase):
+    7          Enter same passphrase again:
+    8          Your identification has been saved in /Users/nhn/.ssh/id_rsa.
+    9          Your public key has been saved in /Users/nhn/.ssh/id_rsa.pub.
+    10          The key fingerprint is:
+    11          SHA256:C5Mrc87/dBHx+KFvSYG5FXm1WC2Ls1qf+U6xxxxx jxxxx@nhn.com
+    12          The key's randomart image is:
+    13          +---[RSA 4096]----+
+    14          |            ..++|
+    15          |            *=.E|
+    16          .... ( 생략 ) ....
+    17          |    *   ... .+o+|
+    18          |    o....     +B|
+    19          +----[SHA256]-----+
+    20          AL01590401:.ssh nhn$ ls -al
+    21          total 240
+    22          drwx------ 27 nhn staff 864 10 14 16:13 .
+    23          drwxr-xr-x+ 46 nhn staff 1472 10 14 16:03 ..
+    24          -rw------- 1 nhn staff 3389 10 14 16:13 id_rsa
+    25          -rw-r--r-- 1 nhn staff 745 10 14 16:13 id_rsa.pub
+    26
+
+### SSH key 등록
+
+생성된 SSH key는 복사하거나 저장하여 GITLAB > preferences > SSH key 페이지에 등록합니다.  
+생성한 SSH key 중 ~/.ssh/id_rsa.pub 내용을 key input에 입력해 주시면 됩니다.
+
+![](https://rlyfaazj0.toastcdn.net/works/images/api-env/skin-dev-env2.jpg)
+
+생성된 SSH key를 복사하기 위해서는 command prompt에 아래의 코드를 입력하여 key를 확인할 수 있습니다.
+
+    1
+    2              $ cat ~/.ssh/id_rsa.pub
+    3
+
+### GIT Access
+
+GITLAB 접근을 위한 포트는 _2222_ 를 사용합니다.  
+SSH 로 GITLAB 접속 시 작업하시는 환경에서 아래의 코드를 통해 접속하실 수 있습니다.
+
+    1
+    2              ssh -i id_rsa git@gitlab-themes.shopby.co.kr -p 2222
+    3
+
+접속 후에는 SSH를 통해 작업하고자 하는 내용을 요청 합니다.
+
+    1
+    2            git {command} ssh://git@gitlab-themes.shopby.co.kr:2222/ {group}/ {repository}.git
+    3
+    4            (예시) 작업환경에 GITLAB 레포지토리를 clone 하기
+    5            git clone ssh://git@gitlab-themes.shopby.co.kr:2222/ {에이전시 그룹명}/ {레포지토리명}.git
+    6
+
+## ② 프로젝트 생성
+
+Gitlab 계정 승인이 완료되면 프로젝트를 생성하여 스킨을 개발해 보세요.  
+프로젝트 내 타겟브랜치와 최소한의 파일이 생성되어야 합니다.  
+레포지토리 내 필수적으로 있어야 하는 파일에 대해서는[스킨 디렉토리 구조](/guide/skin/env-cover/directory) 문서를 참고하시기 바랍니다.
+
+## ③ 스킨 개발
+
+스킨 개발은 [스킨개발 가이드](/guide/skin/dev-cover)를 참고해 주시기 바랍니다.  
+스킨은 플랫폼 구분에 따라 pc/mobile 디렉토리 내 소스가 설치되기 때문에 각 디렉토리에 소스가 있어야 하며, 파일명은 반드시 소문자(pc, mobile)로 지정되어 있어야 합니다.
+
+스킨 개발 후 [스킨 설치 가이드](/guide/skin/application-cover)를 참고하여 스킨 설치를 진행해 주시기 바랍니다.
+
+스킨은 쇼핑몰과 1:1로 매칭하여 적용하고, 프로젝트를 복사할 땐 'fork' 기능을 사용할 것을 권장드립니다.
+
+1개의 스킨을 여러 쇼핑몰에 연결하면 스킨을 수정했을 때 모든 쇼핑몰이 영향 범위에 포함되며,  
+clone, mirror 기능으로 프로젝트를 복사하는 경우 프로젝트 내 수정사항 발생 시 모든 프로젝트를 수정해야 하지만  
+fork 기능을 사용하면 기존 프로젝트와의 동기화 작업을 통해 1번만 수정하여 일괄 반영할 수 있습니다.
+
+스킨 설치 이후 소스가 수정되는 경우 수정된 내용을 쇼핑몰에 적용하기 위해서는 쇼핑몰 관리자에서 재배포 작업을 진행해 주셔야 합니다.  
+재배포 기능은 사용 중 스킨으로 설정된 경우에만 사용할 수 있습니다.
+
+재배포 경로
+
+쇼핑몰 관리자>디자인>디자인 관리>디자인 스킨 리스트
+
+![](https://shopby.works/skin-dev-env7.png?0777b4ca7814d7019e29e2b343e5e8dc)
