--- a/src/components/guide/call-external-script.mdx
+++ b/src/components/guide/call-external-script.mdx
@@ -1,5 +1,3 @@
-# 외부 스크립트 호출 가이드
-
 ## 이해하기
 
 이 문서에서는 shop by pro 어드민에서 설정한 외부 스크립트를 쇼핑몰에 적용할 수 있도록 개발하는 방법을 안내합니다.
@@ -105,98 +103,76 @@ shop by pro 어드민에서 외부 스크립트를 설정할 때 몰의 정보(e
 세팅해야하는 변수들은 다음과 같습니다.
 
 
-|             |          Grouping           ||
-First Header  | Second Header | Third Header |
-| ------------ | :-----------: | -----------: |
-| Content       |          *Long Cell*        ||
-| Content       |   **Cell**    |         Cell |
-|
-zNew section   |     More      |         Data |
-And more      | With an escaped '\|'         ||
+<DataGrid columns={[
+  {key: 0, name: '화면 위치'},
+  {key: 1, name: '변수' },
+  {key: 2, name: '설명' },
+  {key: 3, name: '상세보기' },
+]} rows={[
+  {0: '모든 화면 공통', 1: 'sb.getPlatform()', 2: '디바이스 정보', 3: '-'},
+  {0: '모든 화면 공통', 1: 'sb.profile()', 2: '회원 정보', 3: '회원 정보 조회 API'}
+]} />
 
+export const Table = () => (
+<div className="guide-table mb40">
+  <table>
+    <colgroup>
+      <col/><col/><col/><col/>
+    </colgroup>
+    <thead>
+      <tr>
+        <th scope="col">화면 위치</th>
+        <th scope="col">변수</th>
+        <th scope="col">설명</th>
+        <th scope="col">상세보기</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td rowSpan="2">모든 화면 공통</td>
+        <td className="v-border">sb.getPlatform()</td>
+        <td>디바이스 정보</td><td className="v-border">-</td>
+      </tr>
+      <tr>
+        <td className="v-border">sb.profile</td>
+        <td className="v-border">회원정보</td>
+        <td><a href="https://docs.shopby.co.kr/?url.primaryName=member/#/Profile/get-profile" rel="noopener noreferrer" target="_blank" className="link">회원 정보 조회 API</a></td>
+      </tr>
+      <tr>
+        <td>상품 상세화면</td><td className="v-border">sb.product()</td>
+        <td>-</td>
+        <td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-product" rel="noopener noreferrer" target="_blank" className="link">상품 상세 조회 API</a></td>
+      </tr>
+      <tr>
+        <td>상품 검색결과 화면</td>
+        <td className="v-border">sb.searchedProduct</td>
+        <td>-</td>
+        <td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-search" rel="noopener noreferrer" target="_blank" className="link">상품 검색 API</a></td>
+      </tr>
+      <tr>
+        <td>상품 리스트 화면</td>
+        <td className="v-border">sb.searchedProduct</td>
+        <td>-</td>
+        <td className="v-border">
+          <a href="https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-search" rel="noopener noreferrer" target="_blank" className="link">상품 검색 API</a></td>
+        </tr>
+        <tr>
+          <td>메인분류 상품조회 화면</td>
+          <td className="v-border">sb.displaySection</td>
+          <td>-</td>
+          <td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=display/#/ProductSection/get-sections-by-section-id" rel="noopener noreferrer" target="_blank" className="link">상품 디자인 섹션 조회 API</a></td>
+        </tr>
+        <tr><td rowSpan="2">장바구니 화면</td><td rowSpan="2" className="v-border">sb.cart</td><td rowSpan="2">-</td><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=order/#/Cart/get-cart" rel="noopener noreferrer" target="_blank" className="link">회원 장비구니 조회 API</a></td></tr>
+        <tr><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=order/#/GuestOrder/post-guest-cart" rel="noopener noreferrer" target="_blank" className="link">비회원 장바구니 조회 API</a></td></tr>
+        <tr><td>주문서 작성화면</td><td className="v-border">sb.orderSheet</td><td>-</td><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=order/#/OrderSheet/get-order-sheet" rel="noopener noreferrer" target="_blank" className="link">주문서 조회 API</a></td></tr>
+        <tr><td>주문완료 화면</td><td rowSpan="2" className="v-border">sb.order</td><td rowSpan="2">-</td><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=order/#/MyOrder/get-profile-orders-order-no" rel="noopener noreferrer" target="_blank" className="link">회원 주문 조회 API</a></td></tr>
+        <tr><td>주문상세 화면</td><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=order/#/GuestOrder/get-guest-orders-order-no" rel="noopener noreferrer" target="_blank" className="link">비회원 주문 조회 API</a></td></tr>
+        <tr><td>회원가입 완료화면</td><td className="v-border">sb.profile</td><td>-</td><td className="v-border"><a href="https://docs.shopby.co.kr/?url.primaryName=member/#/Profile/get-profile" rel="noopener noreferrer" target="_blank" className="link">회원 정보 조회 API</a></td></tr></tbody></table>
+</div>
+);
 
-| 화면 위치 | 변수 | 설명 |
-|:--- | --- | --- |
-| -
-상세보기
+<Table />
 
-모든 화면 공통
-
-sb.getPlatform()
-
-디바이스 정보
-
-\-
-
-sb.profile
-
-회원정보
-
-[회원 정보 조회 API](https://docs.shopby.co.kr/?url.primaryName=member/#/Profile/get-profile)
-
-상품 상세화면
-
-sb.product()
-
-\-
-
-[상품 상세 조회 API](https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-product)
-
-상품 검색결과 화면
-
-sb.searchedProduct
-
-\-
-
-[상품 검색 API](https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-search)
-
-상품 리스트 화면
-
-sb.searchedProduct
-
-\-
-
-[상품 검색 API](https://docs.shopby.co.kr/?url.primaryName=product/#/Product/get-products-search)
-
-메인분류 상품조회 화면
-
-sb.displaySection
-
-\-
-
-[상품 디자인 섹션 조회 API](https://docs.shopby.co.kr/?url.primaryName=display/#/ProductSection/get-sections-by-section-id)
-
-장바구니 화면
-
-sb.cart
-
-\-
-
-[회원 장비구니 조회 API](https://docs.shopby.co.kr/?url.primaryName=order/#/Cart/get-cart)
-
-[비회원 장바구니 조회 API](https://docs.shopby.co.kr/?url.primaryName=order/#/GuestOrder/post-guest-cart)
-
-주문서 작성화면
-
-sb.orderSheet
-
-[주문서 조회 API](https://docs.shopby.co.kr/?url.primaryName=order/#/OrderSheet/get-order-sheet)
-
-주문완료 화면
-
-sb.order
-
-[회원 주문 조회 API](https://docs.shopby.co.kr/?url.primaryName=order/#/MyOrder/get-profile-orders-order-no)
-
-주문상세 화면
-
-[비회원 주문 조회 API](https://docs.shopby.co.kr/?url.primaryName=order/#/GuestOrder/get-guest-orders-order-no)
-
-회원가입 완료화면
-
-sb.profile
-
-[회원 정보 조회 API](https://docs.shopby.co.kr/?url.primaryName=member/#/Profile/get-profile)
 
 ※ 상기 정보는 shop by pro 어드민 내 '설정 > 외부 서비스 설정 : 외부 스크립트' 항목의 '변수 조회 가이드' 버튼을 누르면 노출되는 팝업에서도 확인하실 수 있습니다.
 
