chore: remove link

--- a/docs/tutorial-skin-development/1-샵바이-API-호출-가이드.mdx
+++ b/docs/tutorial-skin-development/1-샵바이-API-호출-가이드.mdx
@@ -45,7 +45,7 @@
 
 샵바이 API를 호출하는 쇼핑몰의 모든 화면에서 공통적으로 적용되는 호출 로직을 소개합니다.
 
-샵바이 API는 RESTful 방식이며, 스킨 실행 환경에 따라 호출해야 하는 URI가 다릅니다. 스킨 실행 환경은 알파(alpha) 환경과 리얼(real) 환경으로 구분되며, shop by pro 스킨의 실행 환경은 [enviroment.json](/directory?lv=2#environment-json) 파일 내 profile 값으로 구분할 수 있습니다.
+샵바이 API는 RESTful 방식이며, 스킨 실행 환경에 따라 호출해야 하는 URI가 다릅니다. 스킨 실행 환경은 알파(alpha) 환경과 리얼(real) 환경으로 구분되며, shop by pro 스킨의 실행 환경은 `enviroment.json` 파일 내 profile 값으로 구분할 수 있습니다.
 
 ### 호출 URI
 
@@ -112,7 +112,7 @@ const requestInit = {
 기본적으로 액세스 토큰의 존재 유무에 따라 로그인 상태를 구분할 수 있으며, 그 외 액세스 토큰 의 유효 기간 및 샵바이 API의 에러 응답 값에 따라 로그인 상태가 결정됩니다.  
 새로고침 혹은 쇼핑몰 내 다른 페이지 접근 시에도 로그인 상태를 유지하기 위해, 액세스 토큰 및 유효 기간 정보를 localStorage 에 저장해서 사용할 것을 권장 드립니다.
 
-액세스 토큰 발급 API 등 보다 자세한 내용은 [로그인 화면](./login?lv=11)  문서를 확인하시길 바랍니다.
+액세스 토큰 발급 API 등 보다 자세한 내용은 로그인 화면 문서를 확인하시길 바랍니다.
 
 ## 쇼핑몰 기본 정보 호출 {#call-info}
 
@@ -158,19 +158,6 @@ const requestInit = {
 
 쇼핑몰 기본 정보를 호출할 수 있는 `GET/ malls` API을 소개합니다.  
 해당 API는 쇼핑몰 어느 화면에서든 공통적으로 필요한 기본 API입니다.
-
-<SwaggerConnector
-  method="get"
-  title="쇼핑몰 기본 정보 조회"
-  url="/malls"
-  description="쇼핑몰 전반에 대한 기본 정보와 설정 데이터를 조회할 수 있습니다."
-  link="https://docs.shopby.co.kr/spec/admin-shop.yml"
-/>
-
-<SwaggerView
-  link="https://docs.shopby.co.kr/spec/admin-shop.yml"
-  outlink="https://docs.shopby.co.kr/?url.primaryName=admin/#/Mall/get-malls"
-/>
 
 해당 API는 쇼핑몰 명, 회원 가입 시 설정 값, 푸터 영역에 명시하는 쇼핑몰 기본 정보, 네이버 웹마스터 설정 값, 구글 에널리틱스 설정 값 등의 데이터를 포함합니다.
 
